--- a/estilo.css
+++ b/estilo.css
@@ -3,6 +3,7 @@
 	padding:0;
 
 }
+
 #corpo{
     width:80%;
     height:100%;
@@ -10,6 +11,11 @@
     margin-right:auto;
     background-color: rgb(255, 255, 255);
     
+}
+img{
+
+    width: 60%;
+
 }
 
 #header{
@@ -38,8 +44,9 @@
 #fundo{
     width:100%;
     height:100px;
+    margin-top: 720px;
     text-align: center;
     background-color: rgba(13, 23, 172, 0.507);
-    margin-top:70%;
+
 
 }
