--- a/estilo.css
+++ b/estilo.css
@@ -29,8 +29,7 @@ img{
     width:50%;
     height:500px;
     float:left;   
-    padding-top: 20%;   
-    text-align: center;
+    padding-top: 20%;  
     background-color: rgb(255, 255, 255);
 }
 #right{
@@ -45,8 +44,20 @@ img{
     width:100%;
     height:100px;
     margin-top: 720px;
+    font-size: 0.5em;
+    padding-top: 30px;
     text-align: center;
     background-color: rgba(13, 23, 172, 0.507);
+
+
+}
+
+table{
+    border-radius: 7px;
+    color: rgba(13, 23, 172, 0.507);
+    margin-left: 50%;
+    margin-top: 20%;
+
 
 
 }
