--- a/estilo.css
+++ b/estilo.css
@@ -14,7 +14,7 @@
 }
 img{
 
-    width: 60%;
+    width: 80%;
 
 }
 
@@ -23,7 +23,13 @@ img{
     height:100px;
     text-align: center;
     background-color: rgba(13, 23, 172, 0.507);
- }
+}
+
+#header h1{
+
+    padding-top: 20px;
+}
+
 
 #left{
     width:50%;
@@ -55,9 +61,9 @@ img{
 table{
     border-radius: 7px;
     color: rgba(13, 23, 172, 0.507);
-    margin-left: 50%;
-    margin-top: 20%;
-
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
 
 
 }
