--- a/estilo.css
+++ b/estilo.css
@@ -6,10 +6,11 @@
 
 #corpo{
     width:80%;
-    height:100%;
     margin-left:auto;
     margin-right:auto;
     background-color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: space-between;
     
 }
 img{
@@ -20,7 +21,7 @@ img{
 
 #header{
     width:100%;
-    height:100px;
+    height:70px;
     text-align: center;
     background-color: rgba(13, 23, 172, 0.507);
 }
@@ -33,14 +34,17 @@ img{
 
 #left{
     width:50%;
-    height:500px;
     float:left;   
     padding-top: 20%;  
     background-color: rgb(255, 255, 255);
 }
+#left ul{
+
+    text-align: center;
+
+}
 #right{
     width:50%;
-    height:500px;
     float:right;
     padding-top: 20%;  
     text-align: center;
@@ -48,22 +52,17 @@ img{
 }
 #fundo{
     width:100%;
-    height:100px;
-    margin-top: 720px;
+    height:50px;
+    margin-top: 250px;
     font-size: 0.5em;
     padding-top: 30px;
     text-align: center;
     background-color: rgba(13, 23, 172, 0.507);
-
 
 }
 
 table{
     border-radius: 7px;
     color: rgba(13, 23, 172, 0.507);
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10%;
-
-
+    margin-top: 20%;
 }
